--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,15 +27,15 @@ import logo from "../assets/navLogo.png";
         </div>
 
         <div class="flex w-full max-w-[460px] flex-col items-center gap-4 px-4 text-white sm:gap-5">
-          <div class="text-center text-[17px] font-bold tracking-[-0.48px] sm:text-[19px] lg:text-[20px]">
+          <div class="text-center text-[17px] font-extrabold tracking-[-0.48px] sm:text-[19px] lg:text-[20px]">
             <p class="leading-[28px] sm:leading-[32px] lg:leading-[34px]">99 Nights in the Forest Codes</p>
-            <p class="leading-[28px] sm:leading-[32px] lg:leading-[34px]">
+            <p class="leading-[28px] sm:leading-[32px] lg:leading-[34px] lg:text-nowrap">
               Enter your Roblox username in the Generator page
             </p>
           </div>
           <a
             href="/generator"
-            class="flex h-[52px] w-full items-center justify-center rounded-[8px] bg-[#950606] px-[16px] py-[14px] text-[16px] font-semibold text-white"
+            class="flex h-[52px] w-full items-center justify-center rounded-[8px] bg-[#950606] px-[16px] py-[14px] text-[16px] font-bold text-white hover:bg-[#b00a0a]"
           >
             GET FREE ITEMS
           </a>
