Add h1 on Home Page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import logo from "../assets/navLogo.png";
 
         <div class="flex w-full max-w-[460px] flex-col items-center gap-4 px-4 text-white sm:gap-5">
           <div class="text-center text-[17px] font-extrabold tracking-[-0.48px] sm:text-[19px] lg:text-[20px]">
-            <p class="leading-[28px] sm:leading-[32px] lg:leading-[34px]">99 Nights in the Forest Codes</p>
+            <h1 class="leading-[28px] sm:leading-[32px] lg:leading-[34px]">99 Nights in the Forest Free Diamonds</h1>
             <p class="leading-[28px] sm:leading-[32px] lg:leading-[34px] lg:text-nowrap">
               Enter your Roblox username in the Generator page
             </p>
